<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Unimportant label for big clock at top -->
    <TextView
        android:id="@+id/txtTotalTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_alignLeft="@id/txtCalc"
        android:text="@string/txtFinal_text"
        android:textSize="14sp" />

    <!-- Big clock utop the block -->
    <TextView
        android:id="@+id/txtCalc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTotalTime"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/txtCalc_text"
        android:textSize="35sp" />

    <!-- Big textview that displays added times -->
    <TextView
        android:id="@+id/txtList"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_below="@id/txtCalc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@color/light_black"
        android:hint="@string/txtListHint"
        android:scrollbars="vertical"
        android:textAlignment="center"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/txtAddType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtList"
        android:layout_centerHorizontal="true"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:layout_below="@+id/layoutRelativeManualAdd"
        android:id="@+id/layoutLinearAddition">

        <Button
            android:layout_width="300dp"
            android:backgroundTint="@color/first"
            android:textColor="@color/white"
            android:layout_height="60dp"
            android:id="@+id/btnCurrentAdd"
            android:text="@string/btnCurrentAdd"
            android:textSize="15sp"/>

        <Button
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/second"
            android:textColor="@color/white"
            android:id="@+id/btnManualAdd"
            android:text="@string/btnManualAdd"
            android:textSize="15sp"/>

    </LinearLayout>

    <!-- for clear, remove buttons-->
    <LinearLayout
        android:id="@+id/layoutLinearSubtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutLinearAddition"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="146dp"
            android:layout_height="50dp"
            android:backgroundTint="@color/second"
            android:textColor="@color/white"
            android:text="@string/btnClear"
            android:layout_marginRight="8dp"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="146dp"
            android:backgroundTint="@color/second"
            android:textColor="@color/white"
            android:layout_height="50dp"
            android:text="@string/btnRemove"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/layoutRelativeManualAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtList"
        android:layout_centerHorizontal="true"
        android:visibility="invisible">

        <!-- The EditTexts for entering times -->
        <LinearLayout
            android:id="@+id/layoutLinearTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true">

            <EditText
                android:id="@+id/edtHour"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:hint="@string/edtHint"
                android:inputType="number"
                android:maxLength="2"
                android:nextFocusRight="@id/edtMinute"
                android:textAlignment="center" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:text="@string/edtColon"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtMinute"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:hint="@string/edtHint"
                android:inputType="number"
                android:maxLength="2"
                android:nextFocusLeft="@id/edtHour"
                android:nextFocusRight="@id/edtSecond"
                android:textAlignment="center" />

            <TextView
                android:layout_width="10dp"
                android:layout_height="50dp"
                android:text="@string/edtColon"
                android:textAlignment="center"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/edtSecond"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:hint="@string/edtHint"
                android:inputType="number"
                android:maxLength="2"
                android:nextFocusLeft="@id/edtMinute"
                android:textAlignment="center" />

            <Button
                android:id="@+id/btnMeridiem"
                android:layout_width="60dp"
                android:layout_height="50dp"
                android:layout_marginLeft="5sp"
                android:backgroundTint="@color/third"
                android:paddingBottom="5dp"
                android:text="@string/btnMeridiem"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layoutLinearTime"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:backgroundTint="@color/third"
            android:text="@string/btnAdd_text"
            android:textColor="@color/white"
            android:textSize="15sp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutLinearSubtract"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        >

        <!-- Type of input radio buttons -->
        <RadioGroup
            android:id="@+id/rgTwelveOrTwentyFour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMeridiem"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/rbMeridiem"
                android:textAlignment="center"
                android:textSize="15sp" />

            <RadioButton
                android:id="@+id/rbMilitary"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/rbMilitary"
                android:textSize="15sp" />
        </RadioGroup>

        <Button
            android:id="@+id/btnRestore"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/second"
            android:textColor="@color/white"
            android:layout_height="50dp"
            android:text="@string/txtRestore"
            android:textSize="15sp" />


    </LinearLayout>

    <TextView
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:id="@+id/txtTest"/>

</RelativeLayout>